# unix-pass-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/rules/: agent-workflow.md  api.md  architecture.md
.github/workflows/: ci.yml
src/unix_pass_mcp/: __init__.py  agent.py  audit.py  errors.py  fields.py  git_cmd.py  otp.py  pass_cli.py  security.py  server.py  store.py
tests/: conftest.py
tests/integration/: conftest.py  test_destructive_path.py  test_git_path.py  test_otp_path.py  test_read_path.py  test_write_path.py
tests/unit/: test_agent.py  test_audit.py  test_destructive.py  test_fields.py  test_git_cmd.py  test_git_tools.py  test_m5.py  test_otp.py  test_otp_tools.py  test_pass_cli.py  test_pinentry.py  test_security.py  test_server.py  test_store.py  test_writes.py
